--- a/openhpi/trunk/openhpi.spec.in
+++ b/openhpi/trunk/openhpi.spec.in
@@ -32,7 +32,7 @@ URL: http://www.openhpi.org
 Source: http://prdownloads.sourceforge.net/openhpi/%{name}-%{version}.tar.gz
 #
 Buildroot: %{_rpmtopdir}/INSTALL
-BuildRequires: pkgconfig glib2-devel automake autoconf libtool net-snmp-devel gcc-c++
+BuildRequires: pkgconfig glib2-devel automake autoconf libtool gcc-c++
 %if 0%{?suse_version}
 BuildRequires: tcpd-devel
 %else
@@ -246,6 +246,8 @@ make DESTDIR=%{buildroot} install
 ###################################################
 %defattr(-,root,root)
 %{_bindir}/hpi*
+%{_mandir}/man1/*.1*
+%{_sysconfdir}/openhpi/openhpiclient.conf
 
 ###################################################
 %if 0%{?with_ipmi}
