--- a/openhpi/trunk/ssl/Makefile.am
+++ b/openhpi/trunk/ssl/Makefile.am
@@ -18,4 +18,4 @@ EXTRA_DIST = oh_ssl.h
 
 libopenhpi_ssl_la_SOURCES = oh_ssl.c
 
-libopenhpi_ssl_la_LDFLAGS = -version-info @HPI_LIB_VERSION@
+libopenhpi_ssl_la_LDFLAGS = -version-info @HPI_LIB_VERSION@ @CRYPTO_LIB@
