--- a/openhpi/trunk/utils/Makefile.am
+++ b/openhpi/trunk/utils/Makefile.am
@@ -33,11 +33,13 @@ MAINTAINERCLEANFILES = Makefile.in
 
 GENERATED_HEADER_FILES = \
 			sahpi_enum_utils.h \
+			sahpixtca_enum_utils.h \
 			sahpiatca_enum_utils.h \
 			sahpi_event_encode.h
 
 GENERATED_SRC_FILES = \
 			sahpi_enum_utils.c \
+			sahpixtca_enum_utils.c \
 			sahpiatca_enum_utils.c \
 			sahpi_event_encode.c
 
