First backup of the work for NewSimulator.
Following features works:
Build of plugin,
Generating simulation data,
Controls, 
Sensors

No error is written for the simulation data when testing with hpitest.
(Ok, to much NOTSUPPORT - but we work on it ;-))

--- a/openhpi/branches/newsimulator/openhpi.conf.example
+++ b/openhpi/branches/newsimulator/openhpi.conf.example
@@ -177,3 +177,14 @@ handler libsimulator {
 #        STANDBY_OA = "hostname" # Standby OA hostname or IP address (optional)
 #}
 
+## Section for new_simulator plugin
+#handler libnew_simulator {
+#        entity_root = "{SYSTEM_CHASSIS,9}"
+#        file = "etc/openhpi/simulation.data"
+#        # infos goes to logfile and stdout
+#        # the logfile are log00.log, log01.log ...
+#        logflags = "file stdout"
+#        logfile = "newsim"
+#        # if #logfile_max reached replace the oldest one
+#        logfile_max = "5"
+#}
