--- a/openhpi/branches/newsimulator/Makefile.am
+++ b/openhpi/branches/newsimulator/Makefile.am
@@ -41,6 +41,7 @@ RPMFLAGS                = -ba
 
 EXTRA_DIST              = openhpi.spec.in \
 	openhpi.conf.example \
+	simulation.data.example \
 	openhpiclient.conf.example \
 	README.daemon \
         $(shell find $(srcdir)/include -name '*.h')
@@ -114,7 +115,7 @@ $(top_srcdir)/utils/sahpixtca_enum_utils.h:
 $(top_srcdir)/utils/sahpiatca_enum_utils.h:
 	make -C $(top_builddir)/utils sahpiatca_enum_utils.h
 
-install-data-local: openhpi.pc openhpi.conf.example openhpiclient.conf.example
+install-data-local: openhpi.pc openhpi.conf.example simulation.data.example openhpiclient.conf.example
 	$(mkinstalldirs) $(DESTDIR)$(libdir)/pkgconfig
 	$(INSTALL_DATA) openhpi.pc $(DESTDIR)$(libdir)/pkgconfig
 	$(mkinstalldirs) $(DESTDIR)$(VARPATH)
@@ -122,6 +123,9 @@ install-data-local: openhpi.pc openhpi.conf.example openhpiclient.conf.example
 	$(mkinstalldirs) $(DESTDIR)$(sysconfdir)/openhpi
 	if test ! -e  $(DESTDIR)$(sysconfdir)/openhpi/openhpi.conf; then \
 		$(INSTALL_DATA) $(top_srcdir)/openhpi.conf.example $(DESTDIR)$(sysconfdir)/openhpi/openhpi.conf; \
+	fi
+	if test ! -e  $(DESTDIR)$(sysconfdir)/openhpi/simulation.data; then \
+		$(INSTALL_DATA) $(top_srcdir)/simulation.data.example $(DESTDIR)$(sysconfdir)/openhpi/simulation.data; \
 	fi
 	if test ! -e  $(DESTDIR)$(sysconfdir)/openhpi/openhpiclient.conf; then \
 		$(INSTALL_DATA) $(top_srcdir)/openhpiclient.conf.example $(DESTDIR)$(sysconfdir)/openhpi/openhpiclient.conf; \
@@ -131,6 +135,9 @@ uninstall-local:
 	rm -f $(DESTDIR)$(libdir)/pkgconfig/openhpi.pc
 	if cmp $(top_srcdir)/openhpi.conf.example $(DESTDIR)$(sysconfdir)/openhpi/openhpi.conf; then \
 		rm -f $(DESTDIR)$(sysconfdir)/openhpi/openhpi.conf; \
+	fi
+	if cmp $(top_srcdir)/simulation.data.example $(DESTDIR)$(sysconfdir)/openhpi/simulation.data; then \
+		rm -f $(DESTDIR)$(sysconfdir)/openhpi/simulation.data; \
 	fi
 	if cmp $(top_srcdir)/openhpiclient.conf.example $(DESTDIR)$(sysconfdir)/openhpi/openhpiclient.conf; then \
 		rm -f $(DESTDIR)$(sysconfdir)/openhpi/openhpiclient.conf; \
