Add missing entry for the rpm build to overcome "Checking for unpackaged file(s)"

--- a/openhpi/branches/newsimulator/openhpi.spec.in
+++ b/openhpi/branches/newsimulator/openhpi.spec.in
@@ -263,6 +263,7 @@ make DESTDIR=%{buildroot} install
 %endif
 %dir %{_sysconfdir}/%{name}/
 %config(noreplace) %attr(0640,root,root) %{_sysconfdir}/%{name}/%{name}.conf
+%config(noreplace) %attr(0640,root,root) %{_sysconfdir}/%{name}/simulation.data
 %dir %{_libdir}/%{name}
 %dir /var/lib/%{name}
 %{_libdir}/libopenhpi*.so.*
