Feature requests #3005255 and #3005257

--- a/openhpi/trunk/baselib/Makefile.am
+++ b/openhpi/trunk/baselib/Makefile.am
@@ -18,7 +18,7 @@
 MAINTAINERCLEANFILES 	= Makefile.in *~
 
 INCLUDES 		= \
-	@OPENHPI_INCLUDES@  -I$(top_srcdir)/marshal @OH_SSL_INCLUDES@
+	@OPENHPI_INCLUDES@  -I$(top_srcdir)/transport -I$(top_srcdir)/marshal @OH_SSL_INCLUDES@
 
 EXTRA_DIST		= \
 	oh_client.h oh_client_conf.h oh_client_session.h
@@ -28,7 +28,7 @@ lib_LTLIBRARIES	        = libopenhpi.la
 libopenhpi_la_SOURCES = oh_client.cpp oh_client_session.cpp oh_client_conf.c
 
 libopenhpi_la_LDFLAGS = -version-info @HPI_LIB_VERSION@
-libopenhpi_la_LIBADD  = $(top_builddir)/marshal/libohtcpconnx.la -lstdc++ \
+libopenhpi_la_LIBADD  = $(top_builddir)/transport/libopenhpitransport.la -lstdc++ \
                         $(top_builddir)/marshal/libopenhpimarshal.la \
                         $(top_builddir)/utils/libopenhpiutils.la
 
